# lwidget

./: .clangd  .gitignore  README.md  config.lua  dependencies.txt  meson.build
.github/workflows/: CI.yml
.zed/: launch.json
include/: arg.h  gtk.h  memory.h  strlib.h  types.h  utils.h  widgets.h
src/: arg.c  gtk.c  main.c  memory.c  strlib.c  types.c  utils.c  widgets.c
